Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84007

Infinite recursion when wrapping

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15.2, 6.2.0 Alpha
    • 5.14.2
    • WebChannel
    • None
    • 0451ef836415c93a6beb68a315a25c6ab27f44fa (qt/qtwebchannel/dev) 62f2be9de24bd3760f507e3ceda5b5a1a7f3dbec (qt/qtwebchannel/5.15)

    Description

      QMetaObjectPublisher still has a problem infinitely recursing when wrapping a self-contained QObject twice. The unit test checks for infinite recursion, but it does the wrapping only once and thus doesn't trigger the bug.

      The attached patch extends the unit test to wrap the object twice (and it crashes).

      Attachments

        For Gerrit Dashboard: QTBUG-84007
        # Subject Branch Project Status CR V

        Activity

          People

            msarehn Arno Rehn
            msarehn Arno Rehn
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes